--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kaushal Maran M | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg-light: #f2f2f2;
-      --text-light: #333;
-      --bg-dark: #1e1e1e;
-      --text-dark: #f9f9f9;
-      --primary: #4b0082;
+      --bg-light: #f9f9f9;
+      --text-light: #222;
+      --bg-dark: #121212;
+      --text-dark: #f1f1f1;
+      --primary: #7f00ff;
+      --accent: #e100ff;
+    }
+    * {
+      box-sizing: border-box;
     }
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Outfit', sans-serif;
       margin: 0;
       background: var(--bg-light);
       color: var(--text-light);
-      transition: background 0.3s, color 0.3s;
+      transition: background 0.4s, color 0.4s;
     }
     body.dark {
       background: var(--bg-dark);
       color: var(--text-dark);
     }
     header {
-      background-color: var(--primary);
+      background: linear-gradient(135deg, var(--primary), var(--accent));
       color: white;
-      padding: 2rem;
+      padding: 3rem 2rem;
       text-align: center;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
     section {
       padding: 2rem;
-      max-width: 900px;
+      max-width: 1000px;
       margin: auto;
       opacity: 0;
       transform: translateY(20px);
-      animation: fadeInUp 1s forwards;
+      animation: fadeInUp 0.8s forwards;
     }
-    section:nth-of-type(2) { animation-delay: 0.2s; }
-    section:nth-of-type(3) { animation-delay: 0.4s; }
-    section:nth-of-type(4) { animation-delay: 0.6s; }
-    section:nth-of-type(5) { animation-delay: 0.8s; }
-    section:nth-of-type(6) { animation-delay: 1s; }
+    section:not(:first-of-type) { animation-delay: 0.2s; }
 
     @keyframes fadeInUp {
       to {
@@ -51,61 +57,78 @@
     }
 
     h2 {
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 0.5rem;
+      border-left: 6px solid var(--primary);
+      padding-left: 1rem;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
     }
     .skill, .project, ul {
       margin-bottom: 1rem;
     }
     .project {
-      border: 1px solid #ccc;
-      border-radius: 8px;
+      background: #ffffff;
       padding: 1rem;
-      background-color: #ffffff20;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+      transition: transform 0.2s ease;
+    }
+    .project:hover {
+      transform: scale(1.02);
     }
     body.dark .project {
-      background-color: #333;
-      border-color: #555;
+      background: #1e1e1e;
+      box-shadow: 0 2px 8px rgba(255, 255, 255, 0.05);
+    }
+    .toggle-theme {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: var(--primary);
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      border-radius: 6px;
+      z-index: 1000;
+      transition: background 0.3s;
+    }
+    .toggle-theme:hover {
+      background: var(--accent);
     }
     footer {
       text-align: center;
-      padding: 1rem;
-      background-color: var(--primary);
+      padding: 2rem;
+      background: linear-gradient(to right, var(--primary), var(--accent));
       color: white;
     }
     a {
       color: var(--primary);
       text-decoration: none;
     }
-    .toggle-theme {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      background: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      cursor: pointer;
-      border-radius: 6px;
-    }
-    .dark .toggle-theme {
-      background: #333;
-      color: white;
+    a:hover {
+      text-decoration: underline;
     }
     form input, form textarea {
       display: block;
       width: 100%;
       margin-bottom: 1rem;
-      padding: 0.5rem;
+      padding: 0.75rem;
+      font-size: 1rem;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 6px;
     }
     form button {
-      padding: 0.5rem 1rem;
+      padding: 0.75rem 1.5rem;
       background: var(--primary);
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
+      font-size: 1rem;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+    form button:hover {
+      background: var(--accent);
     }
   </style>
 </head>
