--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       --text-dark: #f1f1f1;
       --primary: #7f00ff;
       --accent: #e100ff;
+      --highlight: #ff8c00;
     }
     * {
       box-sizing: border-box;
@@ -31,12 +32,13 @@
     header {
       background: linear-gradient(135deg, var(--primary), var(--accent));
       color: white;
-      padding: 3rem 2rem;
+      padding: 4rem 2rem;
       text-align: center;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+      clip-path: ellipse(100% 90% at 50% 10%);
     }
     header h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin-bottom: 0.5rem;
     }
     section {
@@ -57,7 +59,7 @@
     }
 
     h2 {
-      border-left: 6px solid var(--primary);
+      border-left: 6px solid var(--highlight);
       padding-left: 1rem;
       font-size: 1.8rem;
       margin-bottom: 1rem;
@@ -66,18 +68,20 @@
       margin-bottom: 1rem;
     }
     .project {
-      background: #ffffff;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
-      transition: transform 0.2s ease;
+      background: #fff;
+      padding: 1.25rem;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+      border-left: 5px solid var(--primary);
     }
     .project:hover {
-      transform: scale(1.02);
+      transform: translateY(-5px);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
     }
     body.dark .project {
       background: #1e1e1e;
-      box-shadow: 0 2px 8px rgba(255, 255, 255, 0.05);
+      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
     }
     .toggle-theme {
       position: fixed;
@@ -86,10 +90,12 @@
       background: var(--primary);
       color: white;
       border: none;
-      padding: 0.5rem 1rem;
+      padding: 0.75rem 1.25rem;
+      font-size: 1rem;
       cursor: pointer;
-      border-radius: 6px;
+      border-radius: 50px;
       z-index: 1000;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: background 0.3s;
     }
     .toggle-theme:hover {
@@ -100,6 +106,7 @@
       padding: 2rem;
       background: linear-gradient(to right, var(--primary), var(--accent));
       color: white;
+      clip-path: ellipse(100% 100% at 50% 100%);
     }
     a {
       color: var(--primary);
@@ -115,25 +122,25 @@
       padding: 0.75rem;
       font-size: 1rem;
       border: 1px solid #ccc;
-      border-radius: 6px;
+      border-radius: 8px;
     }
     form button {
       padding: 0.75rem 1.5rem;
-      background: var(--primary);
+      background: linear-gradient(to right, var(--primary), var(--accent));
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-size: 1rem;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: opacity 0.3s;
     }
     form button:hover {
-      background: var(--accent);
+      opacity: 0.9;
     }
   </style>
 </head>
 <body>
-  <button class="toggle-theme" onclick="document.body.classList.toggle('dark')">Toggle Theme</button>
+  <button class="toggle-theme" onclick="document.body.classList.toggle('dark')">🌓 Theme</button>
   <header>
     <h1>Kaushal Maran M</h1>
     <p>iOS Developer • Full Stack Enthusiast • Certified Network Defender</p>
