--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     :root {
       --bg-light: #f9f9f9;
       --text-light: #222;
-      --bg-dark: #121212;
-      --text-dark: #f1f1f1;
+      --bg-dark: #111;
+      --text-dark: #f0f0f0;
       --primary: #7f00ff;
       --accent: #e100ff;
       --highlight: #ff8c00;
@@ -18,9 +18,13 @@
     * {
       box-sizing: border-box;
     }
+    html, body {
+      margin: 0;
+      padding: 0;
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Outfit', sans-serif;
-      margin: 0;
       background: var(--bg-light);
       color: var(--text-light);
       transition: background 0.4s, color 0.4s;
@@ -34,22 +38,31 @@
       color: white;
       padding: 4rem 2rem;
       text-align: center;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-      clip-path: ellipse(100% 90% at 50% 10%);
+      clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
     }
     header h1 {
       font-size: 3rem;
-      margin-bottom: 0.5rem;
+      margin: 0 0 0.5rem;
+      animation: pulse 2s infinite alternate;
+    }
+    @keyframes pulse {
+      from { transform: scale(1); }
+      to { transform: scale(1.03); }
     }
     section {
-      padding: 2rem;
+      padding: 3rem 2rem;
       max-width: 1000px;
       margin: auto;
+      animation: fadeInUp 1s ease forwards;
       opacity: 0;
       transform: translateY(20px);
-      animation: fadeInUp 0.8s forwards;
     }
-    section:not(:first-of-type) { animation-delay: 0.2s; }
+    section:nth-of-type(1) { animation-delay: 0.2s; }
+    section:nth-of-type(2) { animation-delay: 0.4s; }
+    section:nth-of-type(3) { animation-delay: 0.6s; }
+    section:nth-of-type(4) { animation-delay: 0.8s; }
+    section:nth-of-type(5) { animation-delay: 1s; }
 
     @keyframes fadeInUp {
       to {
@@ -61,7 +74,7 @@
     h2 {
       border-left: 6px solid var(--highlight);
       padding-left: 1rem;
-      font-size: 1.8rem;
+      font-size: 2rem;
       margin-bottom: 1rem;
     }
     .skill, .project, ul {
@@ -69,19 +82,20 @@
     }
     .project {
       background: #fff;
-      padding: 1.25rem;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
+      padding: 1.5rem;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease-in-out;
       border-left: 5px solid var(--primary);
+      position: relative;
     }
     .project:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+      transform: translateY(-8px) scale(1.01);
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
     }
     body.dark .project {
-      background: #1e1e1e;
-      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
+      background: #1c1c1c;
+      color: white;
     }
     .toggle-theme {
       position: fixed;
@@ -93,20 +107,20 @@
       padding: 0.75rem 1.25rem;
       font-size: 1rem;
       cursor: pointer;
-      border-radius: 50px;
+      border-radius: 30px;
       z-index: 1000;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: background 0.3s;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      transition: background 0.3s ease;
     }
     .toggle-theme:hover {
       background: var(--accent);
     }
     footer {
       text-align: center;
-      padding: 2rem;
+      padding: 3rem 2rem;
       background: linear-gradient(to right, var(--primary), var(--accent));
       color: white;
-      clip-path: ellipse(100% 100% at 50% 100%);
+      clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
     }
     a {
       color: var(--primary);
@@ -116,26 +130,25 @@
       text-decoration: underline;
     }
     form input, form textarea {
-      display: block;
       width: 100%;
       margin-bottom: 1rem;
-      padding: 0.75rem;
+      padding: 1rem;
       font-size: 1rem;
       border: 1px solid #ccc;
-      border-radius: 8px;
+      border-radius: 10px;
     }
     form button {
-      padding: 0.75rem 1.5rem;
+      padding: 1rem 2rem;
       background: linear-gradient(to right, var(--primary), var(--accent));
       color: white;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 1rem;
       cursor: pointer;
-      transition: opacity 0.3s;
+      transition: transform 0.3s ease;
     }
     form button:hover {
-      opacity: 0.9;
+      transform: scale(1.05);
     }
   </style>
 </head>
